src/objects/Order__c.object
<CustomObject>
    <description>Use to capture customer&apos;s Orders</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address1__c</fullName>
        <label>Address1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address2__c</fullName>
        <label>Address2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address3__c</fullName>
        <label>Address3</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carrier_Name__c</fullName>
        <label>Carrier Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carrier_Reference__c</fullName>
        <label>Carrier Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collect__c</fullName>
        <label>Collect</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color__c</fullName>
        <formula>IF(Last_Status_change_date__c &lt; (NOW()-( $CustomMetadata.Order_Status_Alert_Mapping_Management__mdt.Image_Times.Red__c /24)), &quot;Red&quot;, 
IF( Last_Status_change_date__c &lt; (NOW()-( $CustomMetadata.Order_Status_Alert_Mapping_Management__mdt.Image_Times.Amber__c /24)), &quot;Amber&quot;,

&quot;Green&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Color</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <description>this field contains an ISO 3166-1 alpha-2 code, which is a two-letter country code defined in ISO 3166-1, part of the ISO 3166 standard</description>
        <label>Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country_Codes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By__c</fullName>
        <label>Created By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_Id__c</fullName>
        <description>Customer identifier generated by Data Access service during SignUp.

Format: UUID (GUID).
Example: eb32e69e28984400b31d5a2abd075d74</description>
        <externalId>true</externalId>
        <label>Customer Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Delivery_Date__c</fullName>
        <label>Expected Delivery Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Failure_Reason__c</fullName>
        <description>This field indicates why the order failed.</description>
        <label>Failure Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Invoice_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if invoice with debit memo was sent to the customer</description>
        <label>Invoice Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Status_change_date__c</fullName>
        <label>Last Status change date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Order_Id__c</fullName>
        <externalId>true</externalId>
        <label>Order Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PODName__c</fullName>
        <label>POD name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PODdate__c</fullName>
        <label>POD date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Post_Code__c</fullName>
        <label>Post Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reject_Reason__c</fullName>
        <description>This field indicates why the order has been rejected.</description>
        <label>Reject Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Service_Level__c</fullName>
        <label>Service Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Same-Day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <label>Short Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status_Alert__c</fullName>
        <formula>IF( Last_Status_change_date__c &lt; (NOW()-( $CustomMetadata.Order_Status_Alert_Mapping_Management__mdt.Image_Times.Red__c /24)),
IMAGE($CustomMetadata.Order_Status_Alert_Mapping_Management__mdt.Image_Times.Red_Image_Red__c, &quot;RED&quot;),

IF ( Last_Status_change_date__c &lt; (NOW()-( $CustomMetadata.Order_Status_Alert_Mapping_Management__mdt.Image_Times.Amber__c /24)), IMAGE($CustomMetadata.Order_Status_Alert_Mapping_Management__mdt.Image_Times.Amber_Image_URL__c, &quot;Amber&quot;),


IMAGE($CustomMetadata.Order_Status_Alert_Mapping_Management__mdt.Image_Times.Green_Image_URL__c, &quot;Green&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Out for Delivery</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Collected</fullName>
                </value>
                <value>
                    <fullName>Ordered</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <label>Tax</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Order</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Address1__c</columns>
        <columns>Address2__c</columns>
        <columns>Address3__c</columns>
        <columns>Address4__c</columns>
        <columns>Created_Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Order Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Orders</pluralLabel>
    <recordTypes>
        <fullName>Replacement</fullName>
        <active>true</active>
        <label>Replacement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>